@@ -64,6 +64,7 @@ depth: 1
  * Migrate form submission listing checkbox toggling to the shared `w-bulk` Stimulus implementation (LB (Ben) Johnston)
  * Allow viewsets to define a common set of view kwargs (Matt Westcott)
  * Migrate the editor unsaved messages popup to be driven by Stimulus using the shared `w-message` controller (LB (Ben) Johnston, Hussain Saherwala)
+ * Add support for tooltip position in `human_readable_date` tooltip (Rohit Sharma)
 
 
 ## Upgrade considerations - changes affecting all projects
